--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -9,7 +9,7 @@
 <button type="button" class="home-button-answer-questions">Answer Questions</button>
 <div class="home-panel">
   <div>
-    <p>Or try some other<a href="#/quizzes">quizzes</a>to exercise your memory. The act of remembering strengthens the memory, so what you've learned doesn't fade away.</p>
+    <p>Or try some other <a href="/quizzes">quizzes</a> to exercise your memory. The act of remembering strengthens the memory, so what you've learned doesn't fade away.</p>
   </div>
 </div>
 
