Add titles to each component html.

--- a/src/app/about.component.html
+++ b/src/app/about.component.html
@@ -1,3 +1,4 @@
+<h2>About</h2>
 <p>This site was created by <a href="https://murrayc.com/">Murray Cumming</a>, inspired by the <a href="http://bigocheatsheet.com/">Big-O Cheatsheet</a>. It now has several other quizzes on related subjects.</p>
 
 <p>The source code, including the content of the quizzes, is in the <a href="https://github.com/murraycu/gwt-bigoquiz">gwt-bigoquiz</a> GitHub project.</p>
