--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -5,5 +5,10 @@
   <div *ngFor="let section of quiz.sections"
     class="quiz-section">
     <h3>{{section.title}}</h3>
+
+    <div *ngFor="let subSection of section.subSections"
+      class="quiz-sub-section">
+      <h4>{{subSection.title}}</h4>
+    </div>
   </div>
 </div>
