--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -10,5 +10,18 @@
       class="quiz-sub-section">
       <h4>{{subSection.title}}</h4>
     </div>
+
+    <div *ngFor="let qa of section.questions"
+      class="quiz-question-answer">
+      <p>
+        <span class="quiz-question-title">Question:</span>
+        <a *ngIf="qa.question.link" class="quiz-question" href={{qa.question.link}}>{{qa.question.text.text}}</a>
+        <span *ngIf="!(qa.question.link)" class="quiz-question">{{qa.question.text.text}}</span>
+      </p>
+      <p>
+        <span class="quiz-answer-title">Answer:</span>
+        <span class="quiz-answer">{{qa.answer.text}}</span>
+      </p>
+    </div>
   </div>
 </div>
