--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -11,6 +11,7 @@
       <h4>{{subSection.title}}</h4>
     </div>
 
+    <!-- Questions in the section. -->
     <div *ngFor="let qa of section.questions"
       class="quiz-question-answer">
       <p>
@@ -23,5 +24,19 @@
         <span class="quiz-answer">{{qa.answer.text}}</span>
       </p>
     </div>
+  </div>
+
+  <!-- Questions at the top level of the quiz, not in any section. -->
+  <div *ngFor="let qa of quiz.questions"
+    class="quiz-question-answer">
+    <p>
+      <span class="quiz-question-title">Question:</span>
+      <a *ngIf="qa.question.link" class="quiz-question" href={{qa.question.link}}>{{qa.question.text.text}}</a>
+      <span *ngIf="!(qa.question.link)" class="quiz-question">{{qa.question.text.text}}</span>
+    </p>
+    <p>
+      <span class="quiz-answer-title">Answer:</span>
+      <span class="quiz-answer">{{qa.answer.text}}</span>
+    </p>
   </div>
 </div>
