quiz.component: Show questions inside their sub-sections.

--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -1,4 +1,4 @@
-<h2 class="page-title-label">About</h2>
+<h2 class="page-title-label">Quiz</h2>
 <div *ngIf="quiz" class="quiz-panel">
   <h2 class="page-secondary-title-label">{{quiz.title}}</h2>
 
@@ -9,9 +9,23 @@
     <div *ngFor="let subSection of section.subSections"
       class="quiz-sub-section">
       <h4>{{subSection.title}}</h4>
+
+      <!-- Questions in the sub-section. -->
+      <div *ngFor="let qa of subSection.questions"
+        class="quiz-question-answer">
+        <p>
+          <span class="quiz-question-title">Question:</span>
+          <a *ngIf="qa.question.link" class="quiz-question" href={{qa.question.link}}>{{qa.question.text.text}}</a>
+          <span *ngIf="!(qa.question.link)" class="quiz-question">{{qa.question.text.text}}</span>
+        </p>
+        <p>
+          <span class="quiz-answer-title">Answer:</span>
+          <span class="quiz-answer">{{qa.answer.text}}</span>
+        </p>
+      </div>
     </div>
 
-    <!-- Questions in the section. -->
+    <!-- Questions in the section, not in any sub-section. -->
     <div *ngFor="let qa of section.questions"
       class="quiz-question-answer">
       <p>
