--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,15 +1,16 @@
-<div class="home-panel">
-  <div>
+<div class="content-panel">
+  <div class="home-panel">
     <div>
-      <p>Learn the Big-O complexities of common algorithms and data structures. See how many you know and work on the questions you most often get wrong.</p>
-      <p>You may restrict questions to a particular section until you are ready to try another.</p>
+      <div>
+        <p>Learn the Big-O complexities of common algorithms and data structures. See how many you know and work on the questions you most often get wrong.</p>
+        <p>You may restrict questions to a particular section until you are ready to try another.</p>
+      </div>
+    </div>
+  </div>
+  <button type="button" class="home-button-answer-questions">Answer Questions</button>
+  <div class="home-panel">
+    <div>
+      <p>Or try some other <a href="/quizzes">quizzes</a> to exercise your memory. The act of remembering strengthens the memory, so what you've learned doesn't fade away.</p>
     </div>
   </div>
 </div>
-<button type="button" class="home-button-answer-questions">Answer Questions</button>
-<div class="home-panel">
-  <div>
-    <p>Or try some other <a href="/quizzes">quizzes</a> to exercise your memory. The act of remembering strengthens the memory, so what you've learned doesn't fade away.</p>
-  </div>
-</div>
-
