--- a/src/app/user-history-sections.component.html
+++ b/src/app/user-history-sections.component.html
@@ -6,7 +6,12 @@
       <ng-container *ngIf="userHistorySections">
         <div *ngFor="let section of userHistorySections.sections"
           class="quiz-section">
-          <h3>{{section.title}}</h3>
+          <h3><a href="/question/quizId={{section.id}}">{{section.title}}</a></h3>
+          <div *ngIf="userHistorySections.getUserStatsForSection(section.id); let stats" class="progress-bar">
+            <p class="progress-part-correct-once" [ngStyle]="{'width': stats.percentCorrectOnce(section.questionsCount)}">{{stats.countQuestionsCorrectOnce}} correct once</p>
+            <p class="progress-part-answered-once" [ngStyle]="{'width': stats.percentAnsweredOnce(section.questionsCount)}">{{stats.countQuestionsAnsweredOnce}} answered once</p>
+            <p class="progress-part-count" style="width: 100%">{{section.questionsCount}} questions</p>
+          </div>
         </div>
       </ng-container>
     </div>
