--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -1,3 +1,12 @@
 <div class="user-status-panel">
-  <a class="user-name" href="/user">some-username</a>
+  <ng-container *ngIf="loginInfo">
+    <a *ngIf="loginInfo.nickname" class="user-name" href="/user">{{loginInfo.nickname}}</a>
+
+    <div *ngIf="!(loginInfo.nickname)" class="login-panel">
+      <!-- TODO: use the properly-branded login button. -->
+      <a *ngIf="loginInfo.loginUrl" href="{{loginInfo.loginUrl}}">Sign In</a>
+    </div>
+
+    <a *ngIf="loginInfo.logoutUrl" href="{{loginInfo.logoutUrl}}">Log Out</a>
+  </ng-container>
 </div>
