user-status component: log out link: Check for nickame, not for the URL.
Because we might know the log out URL even if we don't have a logged in
user.

--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -7,6 +7,6 @@
       <a *ngIf="loginInfo.loginUrl" href="{{loginInfo.loginUrl}}">Sign In</a>
     </div>
 
-    <a *ngIf="loginInfo.logoutUrl" href="{{loginInfo.logoutUrl}}">Log Out</a>
+    <a *ngIf="loginInfo.nickname" href="{{loginInfo.logoutUrl}}">Log Out</a>
   </ng-container>
 </div>
