Question component: Close input tags.

--- a/src/app/question.component.html
+++ b/src/app/question.component.html
@@ -17,7 +17,7 @@
 
     <div *ngIf="question.choices" class="choices-panel">
       <span *ngFor="let choice of question.choices" class="question-radion-button">
-        <input id="foo" name="choices" value="on" type="radio"> 
+        <input id="foo" name="choices" value="on" type="radio" />
         <label for="foo">{{choice.text}}</label>
       </span>
     </div>
