page URLs: query parameters: Use hyphens instead of camel case.
I have changed this in gwt-bigoquiz too:
https://github.com/murraycu/gwt-bigoquiz/commit/989420fcccdbe76a91a4958d69ddd3bc5f7369ee

--- a/src/app/quizzes.component.html
+++ b/src/app/quizzes.component.html
@@ -5,7 +5,7 @@
 
     <div *ngFor="let quiz of quizzes"
       class="quiz-list-row clearfix">
-      <a class="gwt-InlineHyperlink" href="quiz?quizId={{quiz.id}}">{{quiz.title}}</a>
+      <a class="gwt-InlineHyperlink" href="quiz?quiz-id={{quiz.id}}">{{quiz.title}}</a>
       <div class="quiz-list-row-buttons-panel">
         <button type="button" class="gwt-Button button-answer-questions">Answer Questions</button>
         <button type="button" class="gwt-Button button-history">History</button>
