Quizzes component: Make answer and history links work.
gwt-bigoquiz uses buttons instead of links for these, but links
seem to be more appropriate. This needs to be styled properly,
of course.

--- a/src/app/quizzes.component.html
+++ b/src/app/quizzes.component.html
@@ -7,8 +7,8 @@
       class="quiz-list-row clearfix">
       <a class="gwt-InlineHyperlink" href="quiz?quiz-id={{quiz.id}}">{{quiz.title}}</a>
       <div class="quiz-list-row-buttons-panel">
-        <button type="button" class="gwt-Button button-answer-questions">Answer Questions</button>
-        <button type="button" class="gwt-Button button-history">History</button>
+        <a class="button-answer-questions" href="question?quiz-id={{quiz.id}}">Answer Questions</a>
+        <a class="button-history" href="history?quiz-id={{quiz.id}}">History</a>
       </div>
     </div>
   </div>
