Home component: Make Answer Questions link work.

--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -7,7 +7,7 @@
       </div>
     </div>
   </div>
-  <button type="button" class="home-button-answer-questions">Answer Questions</button>
+  <a class="home-button-answer-questions" href="question?quiz-id=bigo">Answer Questions</a>
   <div class="home-panel">
     <div>
       <p>Or try some other <a href="/quizzes">quizzes</a> to exercise your memory. The act of remembering strengthens the memory, so what you've learned doesn't fade away.</p>
