--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -1,6 +1,6 @@
 <div class="user-status-panel">
   <ng-container *ngIf="loginInfo">
-    <a *ngIf="loginInfo.nickname" class="user-name" href="/user">{{loginInfo.nickname}}</a>
+    <a *ngIf="loginInfo.nickname" class="user-name" [routerLink]="['/user']">{{loginInfo.nickname}}</a>
 
     <div *ngIf="!(loginInfo.nickname)" class="login-panel">
       <!-- TODO: use the properly-branded login button. -->
