--- a/src/app/user.component.html
+++ b/src/app/user.component.html
@@ -8,7 +8,7 @@
   <ng-container *ngIf="userHistoryQuizzes">
     <div *ngFor="let quiz of userHistoryQuizzes.quizzes"
       class="quiz-section">
-      <h3><a href="/history/quiz-id={{quiz.id}}">Quiz: {{quiz.title}}</a></h3>
+      <h3><a [routerLink]="['/history']" [queryParams]="{'quiz-id': quiz.id}">{{quiz.title}}</a></h3>
       <div *ngIf="userHistoryQuizzes.getUserStatsForSection(quiz.id); let stats" class="progress-bar">
         <p class="progress-part-correct-once" [ngStyle]="{'width': stats.percentCorrectOnce(quiz.questionsCount)}">{{stats.countQuestionsCorrectOnce}} correct once</p>
         <p class="progress-part-answered-once" [ngStyle]="{'width': stats.percentAnsweredOnce(quiz.questionsCount)}">{{stats.countQuestionsAnsweredOnce}} answered once</p>
