Question component: Add Next link.

--- a/src/app/question.component.html
+++ b/src/app/question.component.html
@@ -29,6 +29,9 @@
       <p *ngIf="question.note" class="note-label">{{question.note}}</p>
       <a *ngIf="question.videoUrl" class="video-anchor" href="{{question.videoUrl}}">Video</a>
       <a *ngIf="question.codeUrl" class="code-anchor" href="{{question.codeUrl}}">Code</a>
+
+      <a [routerLink]="['/question']" [queryParams]="{'quiz-id': quizId, 'section-id': sectionId}">Next</a>
+
     </div>
   </ng-container>
 </div>
